[package]
name = "spinoza"
version = "0.2.0"
edition = "2021"

[features]
default = ["double"]
single = []
double = []

[dependencies]
arrayvec = "0.7.4"
clap = { version = "4.4.8", features = ["derive"] }
comfy-table = "7.1.0"
env_logger = "0.10.1"
evalexpr = "11.2.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
qasm = "1.0.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
